--- a/OCDataImporter.csproj
+++ b/OCDataImporter.csproj
@@ -68,7 +68,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DateUtilitlies.cs" />
+    <Compile Include="ConversionSettings.cs" />
+    <Compile Include="Converter.cs" />
+    <Compile Include="DataGrid.cs" />
+    <Compile Include="IViewUpdater.cs" />
+    <Compile Include="OCDataImporterException.cs" />
+    <Compile Include="OutputFile.cs" />
+    <Compile Include="StudyMetaDataValidator.cs" />
+    <Compile Include="Utilitlies.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +84,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WarningLog.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
