Fix of problem which occures if the metaData file does not correspond to the data file. This is a quick and dirty solution. The root-cause must be found and solved. - Added the 2 test files (the metadata and matching data)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 obj
 bin
+/test/DataImport_1.xml
+/test/Deletes.sql
+/test/Deletes_ONLY_STUDY_EVENTS.sql
+/test/Inserts.sql
+/test/Inserts_ONLY_STUDY_EVENTS.sql
+/test/test-set_grid.dmp
+/test/test-set_parameters.dmp
+/test/OCDataImporter_verification.txt
+/release-latest/OCDataImporter.exe
